jion0403_오류파일__12시 29분 37초.txt
buffers_g ['', '', '', '', '']
[설정] 저장된 설정 적용 완료
[캡차 로컬설치] 체크 상태: 1
[LOCAL STT] 음성캡차 엔진 이미 설치됨
[LOCAL STT] 워커 파일 존재: True, 크기: 3172
[LOCAL STT] 워커 파일 읽기 테스트: stdout=, stderr=Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "<string>", line 2
    import sys, json, os, subprocess, tempfile, uuid,
                                                     ^
SyntaxError: invalid syntax, code=1
[LOCAL STT] Python-STT 경로: C:\Python-STT\python.exe
[LOCAL STT] Python 테스트 stdout: 3.10.11 (tags/v3.10.11:7d4cc5a, Apr  5 2023, 00:38:17) [MSC v.1929 64 bit (AMD64)]
ok
[LOCAL STT] Python 테스트 stderr: 
[LOCAL STT] Python 테스트 코드: 0
[LOCAL STT] 워커 직접 실행: 10초 초과 (정상 - 모델 로딩 중)
[LOCAL STT] 서브프로세스 시작 (PID: 17200)
[LOCAL STT] 상태: {'status': 'ready'}
시작
realID jion0403
realPW love4399!!
로그인 성공
모드4
[로그 초기화 완료] C:\Users\admin\Desktop\chromedriverNew10\page_info_log.txt
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
loop_oper 0
756
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
모든 Chrome 프로세스를 종료했습니다.
외부 IP: 112.162.23.77
[디바이스 모드] device_mode=0 → session_mode=desktop
[FP] mode=desktop UA=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/148.0.7361.0 Safari/537.36
[FP] window=2560x1440, lang=ko-KR,ko;q=0.9,en;q=0.8, mobile=False
--------mode4 전체 error-------------import --------
에러메세지
<urlopen error [SSL: CERTIFICATE_VERIFY_FAILED] certificate verify failed: unable to get local issuer certificate (_ssl.c:997)>
모든 Chrome 프로세스를 종료했습니다.
외부 IP: 112.162.23.77
외부 IP: 112.162.23.77
외부 IP: 112.162.23.77
외부 IP: 112.162.23.77
외부 IP: 112.162.23.77
외부 IP: 112.162.23.77
외부 IP: 112.162.23.77
외부 IP: 112.162.23.77
[디바이스 모드] device_mode=0 → session_mode=desktop
[FP] mode=desktop UA=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/148.0.7734.0 Safari/537.36
[FP] window=1440x900, lang=ko-KR,ko;q=0.9,en;q=0.8, mobile=False
크롬드라이버 강제 종료 성공
--------mode4 전체 error-------------import --------
에러메세지
<urlopen error [SSL: CERTIFICATE_VERIFY_FAILED] certificate verify failed: unable to get local issuer certificate (_ssl.c:997)>
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
loop_oper 1
756
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
시작
File saved to: C:\Users\admin\Desktop\chromedriverNew10\logfile.txt